force-app/main/default/objects/Campus_IT_Interaction__c/Campus_IT_Interaction__c.object-meta.xml
<CustomObject>
    <description>Append-only audit trail of Campus IT Triage Agent actions for operations and risk review.</description>
    <label>Campus IT Interaction</label>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campus IT Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>