force-app/main/default/objects/Campus_IT_Interaction__c/fields/Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Article_Title__c</fullName>
    <label>Article Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>