force-app/main/default/objects/Campus_IT_Interaction__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Campus IT Interactions</relationshipLabel>
    <relationshipName>Campus_IT_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>