force-app/main/default/objects/Campus_IT_Interaction__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>No_Match</fullName>
                <label>No Match</label>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Reused</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Found</fullName>
            </value>
            <value>
                <fullName>Not_Found</fullName>
                <label>Not Found</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Snapshot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>