force-app/main/default/objects/Campus_IT_Interaction__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <label>Student ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>