force-app/main/default/objects/Campus_IT_Interaction__c/listViews/Campus_IT_All_Interactions.listView-meta.xml
<ListView>
    <fullName>Campus_IT_All_Interactions</fullName>
    <columns>NAME</columns>
    <columns>Action_Type__c</columns>
    <columns>Outcome__c</columns>
    <columns>Success__c</columns>
    <columns>Student_ID__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Campus IT Interactions</label>
</ListView>