force-app/main/default/objects/Campus_IT_Interaction__c/listViews/Campus_IT_Interactions_Today.listView-meta.xml
<ListView>
    <fullName>Campus_IT_Interactions_Today</fullName>
    <columns>NAME</columns>
    <columns>Action_Type__c</columns>
    <columns>Outcome__c</columns>
    <columns>Success__c</columns>
    <columns>Student_ID__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Category__c</columns>
    <columns>Article_Title__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Campus IT Interactions Today</label>
</ListView>